created navigation bar in all .html files of tables and requests

--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -17,7 +17,8 @@ body {
     font: normal 12px/150% Calibri, Helvetica, sans-serif;
     background: #fff;
     overflow: auto;
-    border: 1px solid #0f0f0f;
+    border: 1px solid #1fa129;
+    border-radius: 10px;
 }
 
 .datagrid table td, .datagrid table th {
@@ -29,7 +30,8 @@ body {
     color: #0f0f0f;
     font-size: 18px;
     font-weight: bold;
-    border-left: 1px solid #0f0f0f;
+    border-left: 1px solid #1fa129;
+    padding-left: 5px;
 }
 
 .datagrid table thead th:first-child {
@@ -38,7 +40,8 @@ body {
 
 .datagrid table tbody td {
     color: #0f0f0f;
-    border-left: 1px solid #0f0f0f;
+    padding-left: 5px;
+    border-left: 1px solid #1fa129;
     font-size: 15px;
     font-weight: normal;
 }
@@ -67,7 +70,7 @@ body {
 .button-main {
     width: 300px;
     background-color:#68d651;
-    border-radius:16px;
+    border-radius:12px;
     font-size:36px;
     border:2px solid #20c931;
     cursor:pointer;
@@ -126,7 +129,39 @@ width: 100px;
     position:relative;
     top:1px;
 }
+.div-navigation-panel{
+    border:3px solid #c2fab5;
+    border-radius: 15px;
+    padding-bottom: 0px;
+    font-size: 28px;
+    margin-right: 15px;
+    margin-left: 15px;
+    margin-bottom: 5px;
+}
+.div-navigation-panel table{
+    border: white;
+}
 
+.div-navigation-panel table th{
+    border: white;
+    font-weight: normal;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.div-navigation-panel a{
+    text-decoration: none;
+}
+.div-navigation-panel a:hover{
+    text-decoration: underline;
+}
+
+.a-selected{
+    text-decoration: none;
+}
+.a-selected:hover{
+    text-decoration: none;
+}
 /*.button-main{
     background-color: #90ff7a;
     text-align: center;
